Revert "Fix wide image overflowing from the thumbnail container (#8663)" (#8709)
This reverts commit 5082d67dc177caede5c879db5da34d7038b1639c.

--- a/res/css/views/messages/_MImageBody.scss
+++ b/res/css/views/messages/_MImageBody.scss
@@ -54,23 +54,12 @@ $timeline-image-border-radius: 8px;
     }
 }
 
-.mx_MImageBody {
-    .mx_MImageBody_thumbnail_container {
-        border-radius: $timeline-image-border-radius;
+.mx_MImageBody_thumbnail_container {
+    border-radius: $timeline-image-border-radius;
 
-        // Necessary for the border radius to apply correctly to the placeholder
-        overflow: hidden;
-        contain: paint;
-
-        // Override inline max-width value to avoid overflow
-        max-width: 100% !important;
-
-        .mx_MImageBody_thumbnail {
-            // Apply the border radius to an image directly.
-            // This is necessary for images smaller than the placeholder.
-            border-radius: $timeline-image-border-radius;
-        }
-    }
+    // Necessary for the border radius to apply correctly to the placeholder
+    overflow: hidden;
+    contain: paint;
 }
 
 .mx_MImageBody_thumbnail {
